--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
+    "prettier": "~2.3.2",
     "tailwindcss": "^3.0.9",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
